[gd_scene load_steps=9 format=3 uid="uid://ql4u3t5lhtyt"]

[ext_resource type="Script" path="res://menus/player/player.gd" id="1"]

[sub_resource type="CylinderShape3D" id="10"]
height = 1.9
radius = 0.35

[sub_resource type="CapsuleMesh" id="2"]
radius = 0.35
height = 1.5

[sub_resource type="BoxShape3D" id="6"]
size = Vector3(1, 2, 2)

[sub_resource type="BoxShape3D" id="7"]
size = Vector3(2, 2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kwqlu"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="8"]
material = SubResource("StandardMaterial3D_kwqlu")
size = Vector3(0.01, 1.005, 0.01)

[sub_resource type="BoxMesh" id="3"]
size = Vector3(0.7, 0.7, 0.7)

[node name="Player" type="CharacterBody3D"]
collision_layer = 134217729
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("10")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 32
cast_shadow = 0
mesh = SubResource("2")

[node name="BlockOutline" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="BlockOutline"]
collision_layer = 0
collision_mask = 134217728

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlockOutline/Area3D"]
shape = SubResource("6")

[node name="CollisionShape2" type="CollisionShape3D" parent="BlockOutline/Area3D"]
shape = SubResource("7")

[node name="Visible_Block" type="Node3D" parent="BlockOutline"]

[node name="Edge" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge2" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge3" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, 0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge4" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.5, -0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge5" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge6" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge7" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, 0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge8" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -0.5, 0)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge9" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.5, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge10" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, 0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge11" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.5, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Edge12" type="MeshInstance3D" parent="BlockOutline/Visible_Block"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.5, -0.5)
cast_shadow = 0
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Head" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
layers = 32
cast_shadow = 0
mesh = SubResource("3")

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)
cull_mask = 1048543
fov = 90.0
near = 0.01
far = 200.0

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.47035e-08, -1, 0, 1, -4.47035e-08, 0, 0, -0.05)
target_position = Vector3(0, -10, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0.984314, 0.752941, 1)
light_energy = 0.5
shadow_enabled = true
omni_range = 15.0

[node name="auto jump" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="auto jump2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.314889, 0)
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(1, 0, 0, 1)

[connection signal="body_entered" from="BlockOutline/Area3D" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="BlockOutline/Area3D" to="." method="_on_Area_body_exited"]
